Bug 278137 - Trailing artifacts when quickily moving windows and windowgeometry affect is enabled
Summary: Trailing artifacts when quickily moving windows and windowgeometry affect is ...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: git master
Platform: openSUSE Linux
: NOR normal
Target Milestone: 4.10.1
Assignee: KWin default assignee
URL: https://git.reviewboard.kde.org/r/108...
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-20 10:55 UTC by bill p. (aka google01103)
Modified: 2013-02-12 21:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.1
Sentry Crash Report:
mgraesslin: ReviewRequest+


Attachments
artifacts generated when window moved quickly (29.86 KB, image/png)
2011-07-20 10:55 UTC, bill p. (aka google01103)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bill p. (aka google01103) 2011-07-20 10:55:20 UTC
Created attachment 62015 [details]
artifacts generated when window moved quickly

Version:           SVN (using Devel) 
OS:                Linux

Trailing artifacts when moving windows and windowgeometry affect is enabled (see attached image)

Only happen if window are moved quickly, slow movement does not appear to cause them

running kwin-4.6.95 (4.7rc2) under OpenSuse 11.4 x64
self compiled Nvidia driver 280.04

Reproducible: Didn't try

Steps to Reproduce:
move a window quickly

Actual Results:  
trailing artifacts appear

Expected Results:  
no trailing artifacts
Comment 1 bill p. (aka google01103) 2011-07-20 11:57:37 UTC
sorry - is reproducable
Comment 2 Thomas Lübking 2011-07-21 21:24:02 UTC
I can reproduce it with "unshadowed" decorations.

It probably derives from the SIGNAL/SLOT mechanism for moving steps (can loose events, resp. remove detail) - AND the fact that the present updating mechanism is merely a HACK :-(

Note to self (and others ;-)
------------------------------
KWin::Effects _needs_ a way to let effects specify _cummulative_ (and not exclusive) window paddings.
(Shadows are gone but suffered from the same issue, present are at least blurring and the geometry effect)
Comment 3 Thomas Lübking 2013-02-05 18:32:42 UTC
Git commit 1365f04435f0bbbc74301988b778f7fdf1ad4fd8 by Thomas Lübking.
Committed on 30/01/2013 at 17:26.
Pushed by luebking into branch 'master'.

Try to keep the labels in the expanded geometry

and ensure to repaint labels for very tiny windows
Also move to LayerRepaints
FIXED-IN: 4.10.1
REVIEW: 108676

M  +20   -4    kwin/effects/windowgeometry/windowgeometry.cpp
M  +1    -0    kwin/effects/windowgeometry/windowgeometry.h

http://commits.kde.org/kde-workspace/1365f04435f0bbbc74301988b778f7fdf1ad4fd8
Comment 4 Thomas Lübking 2013-02-12 21:29:37 UTC
Git commit 12e873d68460897b5836dd6b58194bb21c979a1e by Thomas Lübking.
Committed on 30/01/2013 at 17:26.
Pushed by luebking into branch 'KDE/4.10'.

Try to keep the labels in the expanded geometry

and ensure to repaint labels for very tiny windows
Also move to LayerRepaints
FIXED-IN: 4.10.1
REVIEW: 108676
(cherry picked from commit 1365f04435f0bbbc74301988b778f7fdf1ad4fd8)

M  +20   -4    kwin/effects/windowgeometry/windowgeometry.cpp
M  +1    -0    kwin/effects/windowgeometry/windowgeometry.h

http://commits.kde.org/kde-workspace/12e873d68460897b5836dd6b58194bb21c979a1e